test prod bundle with Grid part name generator

--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,9 @@ dependencyManagement {
 		mavenBom "com.vaadin:vaadin-bom:$vaadinVersion"
 	}
 }
+
+/*
+vaadin {
+	forceProductionBuild = true
+}
+ */
